# epitechEcsExample

./: .gitignore  CMakeLists.txt  CameraControlSystem_8hpp_source.html  Camera_8hpp_source.html  ComponentArray_8hpp_source.html  ComponentManager_8hpp_source.html  Coordinator_8hpp_source.html  Doxyfile  EntityManager_8hpp_source.html  EventManager_8hpp_source.html  Event_8hpp_source.html  Gravity_8hpp_source.html  Mat44_8hpp_source.html  PhysicsSystem_8hpp_source.html  PlayerControlSystem_8hpp_source.html  Player_8hpp_source.html  RenderSystem_8hpp_source.html  Renderable_8hpp_source.html  RigidBody_8hpp_source.html  Shader_8hpp_source.html  SystemManager_8hpp_source.html  System_8hpp_source.html  Thrust_8hpp_source.html  Transform_8hpp_source.html  Types_8hpp_source.html  Vec2_8hpp_source.html  Vec3_8hpp_source.html  Vec4_8hpp_source.html  WindowManager_8hpp_source.html  annotated.html  classCameraControlSystem-members.html  classCameraControlSystem.html  classComponentArray-members.html  classComponentArray.html  classComponentManager-members.html  classComponentManager.html  classCoordinator-members.html  classCoordinator.html  classEntityManager-members.html  classEntityManager.html  (+53 more)
.github/workflows/: clang-format.yml  doxygen-gh-pages.yml
Source/: Main.cpp  WindowManager.cpp  WindowManager.hpp
Source/Components/: Camera.hpp  Gravity.hpp  Renderable.hpp  RigidBody.hpp  Thrust.hpp  Transform.hpp
Source/Core/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  (+5 more)
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js
(+184 files in other folders)
